# RAWdevRust

./: .gitignore  Cargo.toml  README.md  SPEC.md  TASK.md  rust_out
.github/instructions/: *.instructions.md
docs/: SPEC.md  TASK.md
src/: color.rs  dcp.rs  decode.rs  main.rs  output.rs
src/demosaic/: bilinear.rs  mod.rs  rcd.rs
