[package]
name = "RAWdevRust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rawdev"
path = "src/main.rs"

[dependencies]
rawler = "0.7.2"
image = "0.25"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.102"
walkdir = "2.5.0"
kamadak-exif = "0.6.1"
little_exif = "0.6.23"

[dev-dependencies]
tempfile = "3.27.0"
